@@ -15,6 +15,7 @@ Changes in 5.2.3
 * FIX stats FOO using 'namedcolumn' name columnhead
 * FIX svg terminal: point plot empty title produced spurious mousing directive
 * FIX tweak logscale tic range limits and minor tic generation intervals
+* FIX clipping of INRANGE->UNDEFINED line segments
 
 Changes in 5.2.2
 ================
